# autokernels-genesis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  _classify.py  _config.py  ab.py  analysis.py  bench.py  correctness.py  export_hf.py  global_log.py  harness.toml  mi300x_notes.md  orchestrate.py  prepare.py  program-advanced.md  program.md  prompt.md  pyproject.toml  sandbox.py  summarize.py  tesla_context.md  verify.py  watchdog.py
kernels/func_broad_phase/: README.md  SESSION_LOG.md  classes.json  playbook.md  target.json
kernels/func_solve_body_monolith/: README.md  classes.json  playbook.md  target.json
kernels/kernel_step_1_2/: README.md  classes.json  playbook.md  target.json
launcher/: docker_run.sh  launch_8gpu.sh
references/: amdgcn_patterns.md  hardware_notes.md  index.md  project_context.md
