[project]
name = "autokernels-genesis"
version = "0.1.0"
description = "Autoresearch for Genesis-on-MI300X kernels (8x MI300X, CDNA3, gfx942)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Host-side tooling only; runtime deps (torch, quadrants, genesis) live inside genesis:amd-integration container.
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    # TOML loader for harness.toml -- stdlib (`tomllib`) on 3.11+, pip on 3.10.
    "tomli>=2.0.0; python_version<'3.11'",
]
